i think this fixes the really stupid spacing bug (in a very kludgey way)

--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ p {
   overflow-x: clip;
 }
 
+.wrap-hide {
+  display: none !important;
+}
+
 .fade {
   animation: fadeOut 18.5s ease-out forwards;
   vertical-align: top;
